--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <title>Hipster Ipsum</title>
 
-    <link rel="stylesheet" type="text/class" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/class" href="assets/css/style.css" />
 
   </head>
   <body>
